--- a/package.json
+++ b/package.json
@@ -35,10 +35,15 @@
     "rimraf": "^3.0.2"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
     "@tailwindcss/typography": "^0.5.9",
     "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
+    "cookie": "^0.6.0",
+    "cookie-universal-nuxt": "^2.2.2",
     "daisyui": "^3.1.7",
+    "js-cookie": "^3.0.5",
+    "pinia": "^2.1.7",
     "postcss-custom-properties": "^13.1.5"
   },
   "repository": {
