--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "daisyui": "^3.1.7",
     "js-cookie": "^3.0.5",
     "pinia": "^2.1.7",
-    "postcss-custom-properties": "^13.1.5"
+    "postcss-custom-properties": "^13.1.5",
+    "sass": "^1.69.5",
+    "swiper": "^11.0.5"
   },
   "repository": {
     "type": "git",
